# PMN-ES

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
backend/: .gitignore  Cargo.toml
backend/migrations/: 20250511212851_create_tasks_table.sql
backend/src/: main.rs
backend/src/controllers/: tasks.rs
backend/src/models/: task.rs
backend/src/routes/: mod.rs  tasks.rs
frontend/: .env  .prettierrc  README.md  package.json  pnpm-lock.yaml
frontend/src/components/: CreateTaskModal.tsx  MenuData.tsx
frontend/src/contexts/: MemberContext.tsx  ModalContext.tsx  TaskContext.tsx
frontend/src/layouts/: layout.tsx
frontend/src/pages/: Dashboard.tsx  Settings.tsx
frontend/src/utils/: translator.ts
src/: main.tsx
src/contexts/: CreateTaskModal.tsx  MemberContext.tsx  TaskContext.tsx
src/layouts/: layout.tsx
src/pages/: Calendar.tsx  Dashboard.tsx  Workspaces.tsx  router.tsx
