[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }
shuttle-axum = "0.53.0"
shuttle-runtime = "0.53.0"
tokio = "1.28.2"
shuttle-shared-db = { version = "0.53.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
